--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Tsunami Coffee</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 
 <body>
@@ -49,17 +50,17 @@
 
   <footer>
     <div class="container">
-      <div class="copyright">
-        &copy; Tsunami Coffee
-      </div>
+        <div class="copyright">
+            &copy; Tsunami Coffee
+        </div>
 
-      <nav>
-        <ul>
-          <li>Store</li>
-          <li>Hours</li>
-          <li>Wholesale</li>
-        </ul>
-      </nav>
+        <nav>
+            <ul>
+            <li>Store</li>
+            <li>Hours</li>
+            <li>Wholesale</li>
+            </ul>
+        </nav>
     </div>
   </footer>
 
